--- a/drones.html
+++ b/drones.html
@@ -152,21 +152,20 @@
 
     <!-- SL Series Drones with Modals -->
     <section id="sl-series" class="container py-5">
-    <h2 class="text-center mb-5 section-title glow-violet">🚀 SL Series Titanium Drones</h2>
+        <h2 class="text-center mb-5 section-title glow-violet">🚀 SL Series Titanium Drones</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
             <!-- SL-01 Falcon -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-info">SL-01 “Falcon”</h4>
+                        <h4 class="mb-3" style="color: #8e44ad;">SL-01 “Falcon”</h4>
                         <p>Autonomous Aerial Surveillance Unit designed for area sweeps, anomaly detection, and live-stream feeds. RTB & self-charging enabled.</p>
-                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalFalcon">Browse Images</button>
+                        <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalFalcon">Browse Images</button>
                     </div>
                 </div>
             </div>
 
-            <!-- Modal Falcon -->
             <div class="modal fade" id="modalFalcon" tabindex="-1" aria-labelledby="modalFalconLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
@@ -191,14 +190,13 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-info">SL-02 “Hunter”</h4>
+                        <h4 class="mb-3" style="color: #8e44ad;">SL-02 “Hunter”</h4>
                         <p>High-speed pursuit UAV using vision + GPS locking. Features pack-hunting AI and full autonomy with manual override support.</p>
-                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalHunter">Browse Images</button>
+                        <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalHunter">Browse Images</button>
                     </div>
                 </div>
             </div>
 
-            <!-- Modal Hunter -->
             <div class="modal fade" id="modalHunter" tabindex="-1" aria-labelledby="modalHunterLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
@@ -223,14 +221,13 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                    <h4 class="mb-3 text-info">SL-03 “Vulture”</h4>
-                    <p>Heavy-duty UAV built for payload delivery and equipment deployment in hard-to-reach locations. Magnetic clamps & dual rotors included.</p>
-                    <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalVulture">Browse Images</button>
+                        <h4 class="mb-3" style="color: #8e44ad;">SL-03 “Vulture”</h4>
+                        <p>Heavy-duty UAV built for payload delivery and equipment deployment in hard-to-reach locations. Magnetic clamps & dual rotors included.</p>
+                        <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalVulture">Browse Images</button>
                     </div>
                 </div>
             </div>
 
-            <!-- Modal Vulture -->
             <div class="modal fade" id="modalVulture" tabindex="-1" aria-labelledby="modalVultureLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
@@ -255,9 +252,9 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-info">SL-04 “Viper”</h4>
+                        <h4 class="mb-3 text-violet">SL-04 “Viper”</h4>
                         <p>Stealth operations drone with noise suppression and cloaking capabilities. Optimal for infiltration, signal tracing, and stealth delivery.</p>
-                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalViper">Browse Images</button>
+                        <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalViper">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -271,9 +268,9 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                            <img src="images/Drones/SL04_Viper_1.jpg" alt="Viper Image 1" class="img-fluid rounded modal-image" />
-                            <img src="images/Drones/SL04_Viper_2.jpg" alt="Viper Image 2" class="img-fluid rounded modal-image" />
-                            <img src="images/Drones/SL04_Viper_3.jpg" alt="Viper Image 3" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL04_Viper_1.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL04_Viper_2.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL04_Viper_3.jpg" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
                             <p class="text-muted">Click images to view in large mode</p>
@@ -287,9 +284,9 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-info">SL-05 “Raven”</h4>
+                        <h4 class="mb-3 text-violet">SL-05 “Raven”</h4>
                         <p>Multi-terrain drone with both aerial and ground mobility. Designed for recon, relay missions, and low-altitude intelligence collection.</p>
-                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalRaven">Browse Images</button>
+                        <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalRaven">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -303,9 +300,9 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                            <img src="images/Drones/SL05_Raven_1.jpg" alt="Raven Image 1" class="img-fluid rounded modal-image" />
-                            <img src="images/Drones/SL05_Raven_2.jpg" alt="Raven Image 2" class="img-fluid rounded modal-image" />
-                            <img src="images/Drones/SL05_Raven_3.jpg" alt="Raven Image 3" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL05_Raven_1.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL05_Raven_2.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL05_Raven_3.jpg" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
                             <p class="text-muted">Click images to view in large mode</p>
@@ -319,9 +316,9 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-info">SL-07 “Phantom Vortex”</h4>
+                        <h4 class="mb-3 text-violet">SL-07 “Phantom Vortex”</h4>
                         <p>Experimental drone with magnetic levitation and zero-emission propulsion. Developed for high-speed, silent reconnaissance and disruption ops.</p>
-                        <button type="button" class="btn btn-outline-info mt-3" data-bs-toggle="modal" data-bs-target="#modalPhantom">Browse Images</button>
+                        <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalPhantom">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -335,9 +332,9 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                            <img src="images/Drones/SL07_Phantom_1.jpg" alt="Phantom Image 1" class="img-fluid rounded modal-image" />
-                            <img src="images/Drones/SL07_Phantom_2.jpg" alt="Phantom Image 2" class="img-fluid rounded modal-image" />
-                            <img src="images/Drones/SL07_Phantom_3.jpg" alt="Phantom Image 3" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL07_Phantom_1.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL07_Phantom_2.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Drones/SL07_Phantom_3.jpg" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
                             <p class="text-muted">Click images to view in large mode</p>
@@ -346,9 +343,6 @@
                     </div>
                 </div>
             </div>
-
-
-
         </div>
     </section>
 
