--- a/index.html
+++ b/index.html
@@ -177,17 +177,17 @@
                         <i class="fas fa-robot fa-3x mb-3" style="color: #6f42c1;"></i>
                         <h4 class="mb-2">Drones</h4>
                         <p>Explore Slabbion's titanium drone (SL Series) army: SL-01 to SL-07—each built for purpose, precision, and power.</p>
-                        <a href="drones.html#sl-series" class="btn btn-outline mt-3" style="color: #6f42c1; border-color: #6f42c1;">View Models</a>
+                        <a href="drones.html#sl-series" class="btn btn-outline-violet mt-3">View Models</a>
                     </div>
                 </div>
 
-                <!-- Energy Efficient Homes -->
+                <!-- Architecture -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
                         <i class="fas fa-home fa-3x mb-3" style="color: #228B22;"></i>
                         <h4 class="mb-2">Architecture</h4>
                         <p>Energy Efficient Homes. Designing future-forward smart homes with solar integration, automation, and sustainable living at the core.</p>
-                        <a href="architecture.html#architecture" class="btn btn-outline mt-3" style="color: #228B22; border-color: #228B22;">Discover</a>
+                        <a href="architecture.html#architecture" class="btn btn-outline-forest mt-3">Discover</a>
                     </div>
                 </div>
 
@@ -197,7 +197,7 @@
                         <i class="fas fa-car-side fa-3x mb-3" style="color: #e67e22;"></i>
                         <h4 class="mb-2">Vehicles</h4>
                         <p>Cars, Dune Buggies & Bikes. High-performance custom builds engineered for speed, control, and off-road adventure—Slabbion machines deliver on every terrain.</p>
-                        <a href="vehicles.html#vehicles" class="btn btn-outline mt-3" style="color: #e67e22; border-color: #e67e22;">View Builds</a>
+                        <a href="vehicles.html#vehicles" class="btn btn-outline-orange mt-3">View Builds</a>
                     </div>
                 </div>
 
@@ -207,7 +207,7 @@
                         <i class="fas fa-shield-alt fa-3x mb-3" style="color: #b30000;"></i>
                         <h4 class="mb-2">Body Armor</h4>
                         <p>Slabbion’s body armor blends tactical strength with future-ready materials—designed for resilience, mobility, and innovation in the field.</p>
-                        <a href="armor.html#body-armor" class="btn btn-outline mt-3" style="color: #b30000; border-color: #b30000;">Explore Gear</a>
+                        <a href="armor.html#body-armor" class="btn btn-outline-deepred mt-3">Explore Gear</a>
                     </div>
                 </div>
 
