--- a/vehicles.html
+++ b/vehicles.html
@@ -156,16 +156,16 @@
 
     <!-- Vehicles Modals -->
     <section id="vehicles-gallery" class="container py-5">
-        <h2 class="text-center mb-5 section-title" style="color: #e67e22;">🔥 Slabbion Custom Vehicles</h2>
+        <h2 class="text-center mb-5 section-title glow-orange">🔥 Slabbion Custom Vehicles</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
             <!-- Off-Road Dune Buggy -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                    <h4 class="mb-3" style="color: #e67e22;">Dune Buggy XR-9</h4>
-                    <p>Rugged suspension, reinforced frame, and desert-bred agility. Designed for maximum off-road carnage.</p>
-                    <button type="button" class="btn btn-outline-warning mt-3" data-bs-toggle="modal" data-bs-target="#modalBuggy">Browse Images</button>
+                        <h4 class="mb-3" style="color: #e67e22;">XR-9 “Dune Buggy”</h4>
+                        <p>Rugged suspension, reinforced frame, and desert-bred agility. Designed for maximum off-road carnage.</p>
+                        <button type="button" class="btn btn-outline-orange mt-3" data-bs-toggle="modal" data-bs-target="#modalBuggy">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -174,19 +174,19 @@
             <div class="modal fade" id="modalBuggy" tabindex="-1" aria-labelledby="modalBuggyLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalBuggyLabel">XR-9 Dune Buggy</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                        <img src="images/Vehicles/Buggy_1.jpg" alt="Buggy 1" class="img-fluid rounded modal-image" />
-                        <img src="images/Vehicles/Buggy_2.jpg" alt="Buggy 2" class="img-fluid rounded modal-image" />
-                        <img src="images/Vehicles/Buggy_3.jpg" alt="Buggy 3" class="img-fluid rounded modal-image" />
-                    </div>
-                    <div class="modal-footer">
-                        <p class="text-muted">Click images to view in large mode</p>
-                        <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalBuggyLabel">XR-9 “Dune Buggy”</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Vehicles/Buggy_1.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Vehicles/Buggy_2.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Vehicles/Buggy_3.jpg" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -195,9 +195,9 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                    <h4 class="mb-3" style="color: #e67e22;">GravBike M7</h4>
-                    <p>Electrified dual-suspension beast with adaptive terrain response. For trails, jumps, and raw power.</p>
-                    <button type="button" class="btn btn-outline-warning mt-3" data-bs-toggle="modal" data-bs-target="#modalBike">Browse Images</button>
+                        <h4 class="mb-3" style="color: #e67e22;">GravBike M7</h4>
+                        <p>Electrified dual-suspension beast with adaptive terrain response. For trails, jumps, and raw power.</p>
+                        <button type="button" class="btn btn-outline-orange mt-3" data-bs-toggle="modal" data-bs-target="#modalBike">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -206,19 +206,19 @@
             <div class="modal fade" id="modalBike" tabindex="-1" aria-labelledby="modalBikeLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalBikeLabel">GravBike M7</h5>
-                        <button class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                        <img src="images/Vehicles/Bike_1.jpg" alt="Bike 1" class="img-fluid rounded modal-image" />
-                        <img src="images/Vehicles/Bike_2.jpg" alt="Bike 2" class="img-fluid rounded modal-image" />
-                        <img src="images/Vehicles/Bike_3.jpg" alt="Bike 3" class="img-fluid rounded modal-image" />
-                    </div>
-                    <div class="modal-footer">
-                        <p class="text-muted">Click images to view in large mode</p>
-                        <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalBikeLabel">GravBike M7</h5>
+                            <button class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Vehicles/Bike_1.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Vehicles/Bike_2.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Vehicles/Bike_3.jpg" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -227,9 +227,9 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                    <h4 class="mb-3" style="color: #e67e22;">Urban Striker GT</h4>
-                    <p>Next-gen street vehicle with precision handling, low-profile armor, and smart-drive integration.</p>
-                    <button type="button" class="btn btn-outline-warning mt-3" data-bs-toggle="modal" data-bs-target="#modalRoad">Browse Images</button>
+                        <h4 class="mb-3" style="color: #e67e22;">Urban Striker GT</h4>
+                        <p>Next-gen street vehicle with precision handling, low-profile armor, and smart-drive integration.</p>
+                        <button type="button" class="btn btn-outline-orange mt-3" data-bs-toggle="modal" data-bs-target="#modalRoad">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -238,19 +238,19 @@
             <div class="modal fade" id="modalRoad" tabindex="-1" aria-labelledby="modalRoadLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalRoadLabel">Urban Striker GT</h5>
-                        <button class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                        <img src="images/Vehicles/Road_1.jpg" alt="On Road 1" class="img-fluid rounded modal-image" />
-                        <img src="images/Vehicles/Road_2.jpg" alt="On Road 2" class="img-fluid rounded modal-image" />
-                        <img src="images/Vehicles/Road_3.jpg" alt="On Road 3" class="img-fluid rounded modal-image" />
-                    </div>
-                    <div class="modal-footer">
-                        <p class="text-muted">Click images to view in large mode</p>
-                        <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalRoadLabel">Urban Striker GT</h5>
+                            <button class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Vehicles/Road_1.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Vehicles/Road_2.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Vehicles/Road_3.jpg" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -259,9 +259,9 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                    <h4 class="mb-3" style="color: #e67e22;">ZB-01 “Reckoner”</h4>
-                    <p>Armor-clad survival vehicle with mounted turrets, blackout mode, and reinforced supply storage.</p>
-                    <button type="button" class="btn btn-outline-warning mt-3" data-bs-toggle="modal" data-bs-target="#modalZombie">Browse Images</button>
+                        <h4 class="mb-3" style="color: #e67e22;">ZB-01 “Reckoner”</h4>
+                        <p>Armor-clad survival vehicle with mounted turrets, blackout mode, and reinforced supply storage.</p>
+                        <button type="button" class="btn btn-outline-orange mt-3" data-bs-toggle="modal" data-bs-target="#modalZombie">Browse Images</button>
                     </div>
                 </div>
             </div>
@@ -270,25 +270,25 @@
             <div class="modal fade" id="modalZombie" tabindex="-1" aria-labelledby="modalZombieLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalZombieLabel">ZB-01 “Reckoner”</h5>
-                        <button class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
-                        <img src="images/Vehicles/Zombie_1.jpg" alt="Zombie 1" class="img-fluid rounded modal-image" />
-                        <img src="images/Vehicles/Zombie_2.jpg" alt="Zombie 2" class="img-fluid rounded modal-image" />
-                        <img src="images/Vehicles/Zombie_3.jpg" alt="Zombie 3" class="img-fluid rounded modal-image" />
-                    </div>
-                    <div class="modal-footer">
-                        <p class="text-muted">Click images to view in large mode</p>
-                        <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalZombieLabel">ZB-01 “Reckoner”</h5>
+                            <button class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-wrap gap-3 justify-content-center">
+                            <img src="images/Vehicles/Zombie_1.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Vehicles/Zombie_2.jpg" class="img-fluid rounded modal-image" />
+                            <img src="images/Vehicles/Zombie_3.jpg" class="img-fluid rounded modal-image" />
+                        </div>
+                        <div class="modal-footer">
+                            <p class="text-muted">Click images to view in large mode</p>
+                            <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
+
 
 
     <!-- IMAGE SCROLLER -->
