--- a/armor.html
+++ b/armor.html
@@ -155,21 +155,21 @@
 
     <!-- Slabbion Body Armor Gallery -->
     <section id="armor-gallery" class="container py-5">
-        <h2 class="text-center mb-5 section-title" style="color: #b30000;">🛡️ Slabbion Tactical Body Armor</h2>
+        <h2 class="text-center mb-5 section-title glow-deepred">🛡️ Slabbion Tactical Body Armor</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
-            <!-- Tactical Vest Unit -->
+            <!-- VX-Tac Vest MkII -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3" style="color: #b30000;">VX-Tac Vest MkII</h4>
+                        <h4 class="mb-3 text-deepred">VX-Tac Vest MkII</h4>
                         <p>High-density Kevlar weave, modular pouch system, and reinforced ceramic trauma plates.</p>
-                    <button type="button" class="btn btn-outline-danger-deep mt-3" data-bs-toggle="modal" data-bs-target="#modalBuggy">Browse Images</button>
+                        <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalVest">Browse Images</button>
                     </div>
                 </div>
             </div>
 
-            <!-- Modal: Tactical Vest -->
+            <!-- Modal: VX-Tac Vest MkII -->
             <div class="modal fade" id="modalVest" tabindex="-1" aria-labelledby="modalVestLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
@@ -190,18 +190,18 @@
                 </div>
             </div>
 
-            <!-- Riot Defense Armor -->
+            <!-- RD-09 Riot Frame -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3" style="color: #b30000;">RD-09 Riot Frame</h4>
+                        <h4 class="mb-3 text-deepred">RD-09 Riot Frame</h4>
                         <p>Full-body impact armor with kinetic dampeners, visor HUD, and reinforced forearm guards.</p>
-                        <button type="button" class="btn btn-outline-danger-deep mt-3" data-bs-toggle="modal" data-bs-target="#modalBuggy">Browse Images</button>
+                        <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalRiot">Browse Images</button>
                     </div>
                 </div>
             </div>
 
-            <!-- Modal: Riot Armor -->
+            <!-- Modal: RD-09 Riot Frame -->
             <div class="modal fade" id="modalRiot" tabindex="-1" aria-labelledby="modalRiotLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
@@ -222,18 +222,18 @@
                 </div>
             </div>
 
-            <!-- Recon Light Suit -->
+            <!-- RLS-3 Ghost Skin -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3" style="color: #b30000;">RLS-3 Ghost Skin</h4>
+                        <h4 class="mb-3 text-deepred">RLS-3 Ghost Skin</h4>
                         <p>Ultra-light stealth armor with reactive camo coating, sensor jammers, and thermal damping.</p>
-                    <button type="button" class="btn btn-outline-danger-deep mt-3" data-bs-toggle="modal" data-bs-target="#modalBuggy">Browse Images</button>
+                        <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalRecon">Browse Images</button>
                     </div>
                 </div>
             </div>
 
-            <!-- Modal: Recon Suit -->
+            <!-- Modal: RLS-3 Ghost Skin -->
             <div class="modal fade" id="modalRecon" tabindex="-1" aria-labelledby="modalReconLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
@@ -256,6 +256,7 @@
 
         </div>
     </section>
+
 
 
     <!-- IMAGE SCROLLER -->
