--- a/socialmedia.html
+++ b/socialmedia.html
@@ -209,7 +209,7 @@
     </section>
 
 
-    <!-- IMAGE SCROLLER -->
+        <!-- IMAGE SCROLLER -->
     <section id="image-scroller">
         <!-- CAROUSEL SCROLLER -->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -220,8 +220,12 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Social Media Management Slide"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Graphic Design Slide"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Game Development Slide"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Custom Solutions Slide"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Partner With Us Slide"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Drones Slide"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Architecture Slide"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Armor Slide"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Vehicles Slide"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Custom Solutions Slide"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Partner With Slabbion Slide"></button>
             </div>
 
             <!-- CAROUSEL SLIDES -->
@@ -263,6 +267,42 @@
                     </div>
                 </div>
 
+                <!-- Drones Slide -->
+                <div class="carousel-item">
+                    <img src="images/Drones_Logo_2500x500px.png" class="d-block w-100" alt="Drones Service">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>SL Series Drones</h5>
+                        <p>Autonomous flight. Real-time intelligence. Built for surveillance, pursuit, and tactical deployment.</p>
+                    </div>
+                </div>
+
+                <!-- Architecture Slide -->
+                <div class="carousel-item">
+                    <img src="images/Architecture_Logo_2500x500px.png" class="d-block w-100" alt="Architecture Service">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Eco-Tech Architecture</h5>
+                        <p>Resilient, green, and modular structures engineered for tomorrow’s world and beyond.</p>
+                    </div>
+                </div>
+
+                <!-- Vehicles Slide -->
+                <div class="carousel-item">
+                    <img src="images/Vehicles_Logo_2500x500px.png" class="d-block w-100" alt="Vehicles Service">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Custom Combat Vehicles</h5>
+                        <p>From wasteland buggies to high-tech street beasts — built for performance and survival.</p>
+                    </div>
+                </div>
+
+                <!-- Body Armor Slide -->
+                <div class="carousel-item">
+                    <img src="images/Armor_Logo_2500x500px.png" class="d-block w-100" alt="Body Armor Service">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Body Armor</h5>
+                        <p>Advanced protection systems designed for mobility, resilience, and tactical superiority.</p>
+                    </div>
+                </div>
+
                 <!-- Custom Solutions Slide -->
                 <div class="carousel-item">
                     <img src="images/CustomSolutions_Logo_2500x500px.png" class="d-block w-100" alt="Custom Solutions Service">
@@ -280,6 +320,7 @@
                         <p>Join forces with a team that values excellence, creativity, and long-term impact.</p>
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
